[gd_scene load_steps=2 format=2]

[ext_resource path="res://Dice_Roller.gd" type="Script" id=1]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 1024.0
offset_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
offset_top = 5.0
offset_right = 110.0
offset_bottom = 19.0
text = "Anzahl der Würfe"

[node name="Number_Of_Throws" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
offset_left = 114.0
offset_right = 172.0
offset_bottom = 24.0

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer"]
offset_left = 176.0
offset_top = 5.0
offset_right = 188.0
offset_bottom = 19.0
text = "   "

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
offset_left = 192.0
offset_top = 5.0
offset_right = 283.0
offset_bottom = 19.0
text = "#Würfelseiten"

[node name="Dice_Sides" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
offset_left = 287.0
offset_right = 345.0
offset_bottom = 24.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
offset_left = 349.0
offset_right = 466.0
offset_bottom = 24.0
text = "Wiederholung"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 470.0
offset_right = 506.0
offset_bottom = 24.0
text = "Roll"

[node name="Label" type="Label" parent="VBoxContainer"]
offset_top = 28.0
offset_right = 1024.0
offset_bottom = 42.0

[node name="Error_Label" type="Label" parent="VBoxContainer"]
offset_top = 586.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_vertical = 10
custom_colors/font_color = Color( 0.847059, 0.137255, 0.137255, 1 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
